<resources>
    <string name="app_name">RegisterLoginUI</string>
    <string name="sign_in_now">Sign In Now</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="track_your_personal_attendance_and_college_notifications_using_our_application">Track your personal attendance and college notifications using our application</string>
    <string name="attendance_tracker">Attendance Tracker</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?<b>Sign Up</b></string>
    <string name="sign_up">Sign Up</string>
    <string name="faculty">Faculty</string>
    <string name="student">Student</string>
    <string name="which_one_are_you">Which one are you?</string>
    <string name="proceed">Proceed</string>
    <string name="select_to_proceed_with_your_registration_process_and_to_unlock_our_application_features">SELECT YOUR TYPE</string>
    <string name="enter_details">Enter Details</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="parent_name">Parent Name</string>
    <string name="parent_s_phone_number">Parent Phone No</string>
    <string name="student_phone_no">Student Phone No</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="roll_number">Roll Number</string>
    <string name="year">Year</string>
    <string name="department">Department</string>
    <string name="section">Section</string>
    <string name="next_step">NEXT STEP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="please_enter_the_otp_sent_to_your_mobile">Please enter the otp sent to your mobile</string>
    <string name="validate_otp">Validate OTP</string>
    <string name="didn_t_received_otp">Didnot received OTP?</string>
    <string name="resend">Resend</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="middle_name">Middle Name</string>
    <string name="login">LOGIN</string>
    <string name="email_address">Email Address</string>
    <string name="attendance">Attendance</string>
    <string name="payment">Payment</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="memo">Memo</string>
    <string name="google_sign_in">Google Sign In</string>
    <string name="attendance_sheet">Attendance Sheet</string>
    <string name="click_to_get_detailed_report">Click to get detailed report</string>
    <string name="all_your_notifications_are_here">All your notifications are here</string>
    <string name="create_new_notification">Notification Hub</string>
    <string name="notification_title">Notification Title</string>
    <string name="create_new_notifications_here">Create new notifications here...</string>
    <string name="note">Note</string>
</resources>